# mayan-py

./: 404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml
api/: index.html
docs/: api.md  index.md
examples/: async_quote_and_status.py  quote.py
search/: search_index.json
src/mayan/: __init__.py  _transport.py  client.py  exceptions.py  models.py
tests/: conftest.py  test_async_client.py  test_client.py  test_integration.py  test_models.py  test_transport.py
